# vigus_gui

./: .gitmodules  README.md
general_gui/: CMakeLists.txt  package.xml
general_gui/config/: gui_config.xml
general_gui/include/: ImagesServer.inl
general_gui/src/: arm_gui.cpp  arm_gui.h  arm_gui.ui  camera_gui.cpp  camera_gui.h  camera_gui.ui  gui.cpp  gui.h  gui.ui  main.cpp  pclviewer_gui.cpp  pclviewer_gui.h  pclviewer_gui.ui  uav_gui.cpp  uav_gui.h  uav_gui.ui
libraries_gui/: CMakeLists.txt  package.xml
libraries_gui/include/: CallbackSubscriber.h  CallbackSubscriber.inl  ImagesClient.h  ImagesClient.inl  ImagesServer.h
libraries_gui/src/: arm_gui.cpp  arm_gui.h  arm_gui.ui  camera_gui.cpp  camera_gui.h  camera_gui.ui  pclviewer_gui.cpp  pclviewer_gui.h  pclviewer_gui.ui  uav_gui.cpp  uav_gui.h  uav_gui.ui
